--- a/Makefile.config
+++ b/Makefile.config
@@ -10,9 +10,9 @@ REPO_NIGHTLYNAME = nightly
 REPO_ORIGIN      = default = Please download from original source.
 
 REPO_FILENAME      = openmsx.obm
-LICENSE_FILENAME   = docs/license.txt
-CHANGELOG_FILENAME = docs/changelog.txt
-README_FILENAME    = docs/readme.txt
+LICENSE_FILENAME   = docs/license.ptxt
+CHANGELOG_FILENAME = docs/changelog.ptxt
+README_FILENAME    = docs/readme.ptxt
 DESC_FILENAME      = docs/descriptions.ptxt
 LIST_FILENAME      = src/themes.list
 
@@ -57,7 +57,7 @@ REPO_TITLE    = $(REPO_NAME) $(VERSION_STRING)
 TAR_FILENAME  = $(DIR_NAME).$(TAR_SUFFIX)
 BZIP_FILENAME = $(TAR_FILENAME).$(BZIP2_SUFFIX)
 ZIP_FILENAME  = $(DIR_NAME).$(ZIP_SUFFIX)
-DOC_FILENAMES = $(addsuffix .$(TXT_SUFFIX),$(basename $(LICENSE_FILENAME) $(CHANGELOG_FILENAME) $(README_FILENAME)))
+DOC_FILENAMES := $(addsuffix .$(TXT_SUFFIX),$(basename $(LICENSE_FILENAME) $(CHANGELOG_FILENAME) $(README_FILENAME)))
 REV_FILENAME  = REV
 
 BUNDLE_FILES  = $(DOC_FILENAMES) $(REPO_FILENAME)
