Fix: script dir was not made part of the source distribution

--- a/Makefile.config
+++ b/Makefile.config
@@ -43,15 +43,17 @@ TXT_SUFFIX   = txt
 PTXT_SUFFIX  = ptxt
 
 # Paths defining the directory layout
-SRCDIR   = src
-DOCDIR   = docs
+SRCDIR    = src
+DOCDIR    = docs
+SCRIPTDIR = scripts
+
+MAINDIRS       = $(SRCDIR) $(DOCDIR) $(SCRIPTDIR)
 
 # Define Replacement strings in the documentation
 REPO_TITLE_DUMMY     = {{REPO_TITLE}}
 REPO_FILENAME_DUMMY  = {{REPO_FILENAME}}
 REPO_REVISION_DUMMY  = {{REPO_REVISION}}
 
-MAINDIRS       = $(SRCDIR) $(DOCDIR)
 
 REPO_TITLE    = $(REPO_NAME) $(VERSION_STRING)
 TAR_FILENAME  = $(DIR_NAME).$(TAR_SUFFIX)
