--- a/.hgignore
+++ b/.hgignore
@@ -6,6 +6,7 @@ Makefile.local
 
 # And the description file and the grs which are generated automatically
 openmsx.obm
+openmsx-*
 
 # Ignore intermediate files created by the Makefile:
 docs/license.txt
