--- a/Makefile.config
+++ b/Makefile.config
@@ -1,69 +1,56 @@
-# Settings for the Makefile which define
-# various things like the names, paths, etc pp
-#
+# This file defines the principal settings for this project
 
-# GRF Name
-REPO_NAME        = OpenMSX
-FILENAME         = openmsx
-REPO_SHORTNAME   = OMSX
-REPO_NIGHTLYNAME = nightly
-REPO_ORIGIN      = default = Please download from original source.
+REPO_NAME          := OpenMSX
+REPO_SHORTNAME     := OMSX
+REPO_ORIGIN         = default = Please redownload from BaNaNaS.
+# GRF_ID           :=
 
-REPO_FILENAME      = openmsx.obm
-LICENSE_FILENAME   = docs/license.ptxt
-CHANGELOG_FILENAME = docs/changelog.ptxt
-README_FILENAME    = docs/readme.ptxt
-DESC_FILENAME      = docs/descriptions.ptxt
-LIST_FILENAME      = src/themes.list
+MAIN_FILENAME_SRC   = $(SRC_DIR)/themes.list
+MAIN_TARGET        := openmsx.obm
 
-# Build parameters and programmes
-# Usually this needs no change.
-TAR_FLAGS      = cf
-ZIP_FLAGS      = -r
-BZIP_FLAGS     = -k9f
+# If everything is default, you don't need the rest:
 
-# Macs have a different md5 command than linux or mingw envirnoment:
-ifeq ($(OSTYPE),Darwin)
-MD5SUM   = md5 -r
-else
-MD5SUM   = md5sum
-endif
+# comment out those dirs which are not in use
+SRC_DIR            := src
+DOC_DIR            := docs
+SCRIPT_DIR         := scripts
+# Add any dirs which shall be bundled in a source release additionally
+# to the dirs mentioned above.
+EXTRA_DIRS         :=
 
-TAR      = tar
-ZIP      = zip
-BZIP     = bzip2
-MAKE     = make
-UNIX2DOS = unix2dos
+# separate dirs for the nfo and pcx files (must be a subdir of 
+# or the same as the SRC_DIR )
+NFO_DIR            := $(SRC_DIR)/nfo
+PCX_DIR            := $(SRC_DIR)/pcx
 
+# Documentation files:
+README_FILENAME_SRC    := $(DOC_DIR)/readme.ptxt
+LICENSE_FILENAME_SRC   := $(DOC_DIR)/license.ptxt
+CHANGELOG_FILENAME_SRC := $(DOC_DIR)/changelog.ptxt
+DESC_FILENAME_SRC      := $(DOC_DIR)/descriptions.ptxt
 
-TAR_SUFFIX   = tar
-ZIP_SUFFIX   = zip
-BZIP2_SUFFIX = bz2
-TXT_SUFFIX   = txt
-PTXT_SUFFIX  = ptxt
+# file extentions which indicate plain text source files, 
+# parsable by a text editor
+FILE_SRC_EXTENSIONS = list
 
-# Paths defining the directory layout
-SRCDIR    = src
-DOCDIR    = docs
-SCRIPTDIR = scripts
+# file extensions which indicate binary source files
+FILE_INC_EXTENSIONS = mid
 
-MAINDIRS       = $(SRCDIR) $(DOCDIR) $(SCRIPTDIR)
+# Replacement strings in the source and in the documentation
+# You may only change the values, not add new definitions
+# (unless you know where to add them in other places, too)
+REPO_TITLE_DUMMY      := {{GRF_TITLE}}
+GRF_ID_DUMMY          := {{GRF_ID}}
+REPO_REVISION_DUMMY   := {{REPO_REVISION}}
+OUTPUT_FILENAME_DUMMY := {{FILENAME}}
 
-# Define Replacement strings in the documentation
-REPO_TITLE_DUMMY     = {{REPO_TITLE}}
-REPO_FILENAME_DUMMY  = {{REPO_FILENAME}}
-REPO_REVISION_DUMMY  = {{REPO_REVISION}}
+# List of all files which will get shipped
+# DOC_FILES = readme, changelog and license
+# GRF_FILENAME = MAIN_FILENAME_SRC with the extention .grf
+# Add any additional, not usual files here, too, including
+# their relative path to the root of the repository
+MIDI_FILES            := $(shell cat $(MAIN_FILENAME_SRC) | ./scripts/midifiles.py)
+BUNDLE_FILES           = $(MAIN_TARGET) $(DOC_FILES) $(MIDI_FILES)
 
-
-REPO_TITLE    = $(REPO_NAME) $(VERSION_STRING)
-TAR_FILENAME  = $(DIR_NAME).$(TAR_SUFFIX)
-BZIP_FILENAME = $(TAR_FILENAME).$(BZIP2_SUFFIX)
-ZIP_FILENAME  = $(DIR_NAME).$(ZIP_SUFFIX)
-DOC_FILENAMES := $(addsuffix .$(TXT_SUFFIX),$(basename $(LICENSE_FILENAME) $(CHANGELOG_FILENAME) $(README_FILENAME)))
-REV_FILENAME  = REV
-
-BUNDLE_FILES  = $(DOC_FILENAMES) $(REPO_FILENAME)
-
-# Remove the @ when you want a more verbose output.
-_V := @
-_E := @echo
+# Files which also need cleaning:
+CLEAN_ADD             := docs/changelog.txt docs/license.txt docs/readme.txt
