Change: Also add the md5 sums of the midi files to source releases

--- a/Makefile.config
+++ b/Makefile.config
@@ -50,6 +50,7 @@ OUTPUT_FILENAME_DUMMY := {{FILENAME}}
 # Add any additional, not usual files here, too, including
 # their relative path to the root of the repository
 MIDI_FILES            := $(shell cat $(MAIN_FILENAME_SRC) | ./scripts/midifiles.py)
+GRF_FILES             := $(MIDI_FILES)
 BUNDLE_FILES           = $(MAIN_TARGET) $(DOC_FILES) $(MIDI_FILES)
 
 # Files which also need cleaning:
