--- a/scripts/Makefile.common
+++ b/scripts/Makefile.common
@@ -91,6 +91,9 @@ docs: $(DOC_FILES)
 	$(_V) [ -e *.$(REV_EXTENSION) ] && rm *.$(REV_EXTENSION) || echo ""
 	$(_V) touch $@
 
-depend: $(REV_FILENAME)
+depend: $(MAKEFILE_DEP)
+$(MAKEFILE_DEP): $(REV_FILENAME)
 	$(_E) "[Generating] $(MAKEFILE_DEP)"
 	$(_V) for i in `$(REPO_FILES_CMD) | grep -E '($(FILE_SRC_RE)grf)$$'`; do echo "$$i: "`for j in $(FILE_SRC_EXTENSIONS) $(FILE_INC_EXTENSIONS); do cat $$i |  grep -v '^//' | grep -o "[a-zA-Z0-9/_.-]\+\.$$j" | sort | uniq; done` | grep -v -E ": $$" ; done | sort | uniq | $(AWK) '{ print $$0"\n\t$$(_V) touch $$@" }' > $(MAKEFILE_DEP)
+	$(_V) for i in `$(REPO_FILES_CMD) | grep -E '($(FILE_SRC_RE)grf)$$'`; do echo "Makefile.dep: $$i"; done >> $(MAKEFILE_DEP)
+	$(_V) for i in `ls Makefile* scripts/* | grep -v Makefile.dep`; do echo "Makefile.dep: $$i"; done >> $(MAKEFILE_DEP)
