--- a/scripts/Makefile.bundles
+++ b/scripts/Makefile.bundles
@@ -23,9 +23,9 @@ $(BZIP_FILENAME): $(TAR_FILENAME)
 	$(_V)$(BZIP) $(BZIP_FLAGS) $^
 
 # Installation process
-install: $(TAR_FILENAME) $(INSTALL_DIR)
+install: $(DIR_NAME) $(INSTALL_DIR)
 	$(_E) "[INSTALL] to $(INSTALL_DIR)"
-	$(_V)-cp $(TAR_FILENAME) $(INSTALL_DIR)
+	$(_V)-cp -r $(DIR_NAME) $(INSTALL_DIR)
 ifdef INSTALLDIR
 	$(_E) [Warning] The use of 'INSTALLDIR' is deprecated and may be removed in the future.
 	$(_E) [Warning] Use 'INSTALL_DIR' instead.
