--- a/Makefile.config
+++ b/Makefile.config
@@ -39,7 +39,7 @@ FILE_INC_EXTENSIONS = mid
 # Replacement strings in the source and in the documentation
 # You may only change the values, not add new definitions
 # (unless you know where to add them in other places, too)
-REPO_TITLE_DUMMY      := {{GRF_TITLE}}
+REPO_TITLE_DUMMY      := {{REPO_TITLE}}
 GRF_ID_DUMMY          := {{GRF_ID}}
 REPO_REVISION_DUMMY   := {{REPO_REVISION}}
 OUTPUT_FILENAME_DUMMY := {{FILENAME}}
