--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -24,3 +24,18 @@ $(MAIN_TARGET): $(MAIN_FILENAME_SRC) $(MIDI_FILES) $(DESC_FILENAME) $(README_FIL
 	@echo "$(REPO_ORIGIN)" >> $@
 	$(_E) "[Done] Basesound successfully generated."
 	$(_E) ""
+	
+readme.txt: readme.ptxt $(REV_FILENAME)
+	$(_E) "[Generating] $@"
+	$(_V) cat $< \
+		| sed -e "s/$(REPO_TITLE_DUMMY)/$(REPO_TITLE)/" \
+		| sed -e "s/$(GRF_ID_DUMMY)/$(GRF_ID)/" \
+		| sed -e "s/$(REPO_REVISION_DUMMY)/$(REPO_REVISION)/" \
+		| sed -e "s/$(OUTPUT_FILENAME_DUMMY)/$(OUTPUT_FILENAME)/" \
+		> $@
+
+	@echo "" >> $@
+	@echo "[authors]" >> $@
+	$(_V) cat $(MAIN_FILENAME_SRC) | scripts/sanitize_list.py | scripts/authorlist.py >> $@
+		
+	$(_V) [ -z "$(UNIX2DOS)" ] || $(UNIX2DOS) $(UNIX2DOS_FLAGS) $@
