Change: [Makefile] Update to makefile version r102 - Change: Improve speed of dep check, the main target depend on Makefile.dep and make Makefiles a dependency for Makefile.dep (Rubidium) - Fix (r76): Let Makefile.dep only depend on the MAIN_TARGET. Otherwise missing files will not trigger sensible error messages - Feature: Add 'addcheck' which checks for dependencies not added to the mercurial repo - Fix (r77): Don't rebuild when calling clean or mrproper. Only have Makefile.dep depend on the main source files (Rubidium) - Change: Make Debian and Fedora users happy (Rubidium) - Fix: Don't rebuild the md5sums file which one wants to check against - Fix: Also ignore removed files for dep checks - Change: Update 'Makefile.local.sample' to the current usage - Feature [#879]: Introduce target 'distclean' which should delete everything not found in the tarball (based on patch by blathijs) - Fix: [#881] Don't pack files which make no sense in a source release Especially don't pack repo-specific files like .hgignore and .hgtags Also don't pack extended file attributes which get packed by default on OSX - Fix: Fail on the missing file, not on the dependency check - Fix: {{REPO_REVISON}} didn't work as tag for strings in the readme - Fix: {{GRF_MD5}} didn't work as tag for string in the readme

--- a/scripts/Makefile.def
+++ b/scripts/Makefile.def
@@ -3,12 +3,15 @@ shell = /bin/sh
 # We want to disable the default rules. It's not c/c++ anyway
 .SUFFIXES:
 
+PROJECT_TYPE   ?= NFO
+
 ################################################################
 # Programme definitions / search paths
 ################################################################
 # Build parameters and programmes
 NFORENUM_FLAGS ?=
-GRFCODEC_FLAGS ?= -e -p 2
+GRFCODEC_FLAGS ?= -e -p 2 -c
+CATCODEC_FLAGS ?= -e
 TAR_FLAGS      ?= -cf
 ZIP_FLAGS      ?= -r
 SRCZIP_FLAGS   ?=
@@ -16,9 +19,14 @@ BZIP_FLAGS     ?= -k9f
 CC_FLAGS       ?= -C -E - <
 MAKE_FLAGS     ?=
 UNIX2DOS_FLAGS ?= -q
+NML_FLAGS      ?=
+# OSX has nice extended file attributes which create their own file within tars. We don't want those, thus don't copy them
+CP_FLAGS       ?= $(shell [ "$(OSTYPE)" = "Darwin" ] && echo "-rfX" || echo "-rf")
 
-NFORENUM       ?= renum
+
+NFORENUM       ?= $(shell [ `which nforenum 2>/dev/null` ] && echo "nforenum" || echo "renum")
 GRFCODEC       ?= grfcodec
+CATCODEC       ?= catcodec
 TAR            ?= tar
 ZIP            ?= zip
 SRCZIP         ?= gzip
@@ -30,22 +38,26 @@ MAKE           ?= make
 UNIX2DOS       ?= $(shell [ `which unix2dos 2>/dev/null` ] && echo "unix2dos" || echo "")
 # Macs have a different md5 command than linux or mingw envirnoment:
 MD5SUM         ?= $(shell [ "$(OSTYPE)" = "Darwin" ] && echo "md5 -r" || echo "md5sum")
+NML            ?= nml2nfo
 
 SCRIPT_DIR     ?= scripts
 SRC_DIR        ?= sprites
 NFO_DIR        ?= $(SRC_DIR)/nfo
 DOC_DIR        ?= docs
+ifeq ($(PROJECT_TYPE),NML)
+LANG_DIR       ?= lang
+endif      
 
 # Add some OS detection and guess an install path (use the system's default)
 OSTYPE:=$(shell uname -s)
 ifeq ($(OSTYPE),Linux)
-INSTALL_DIR?=$(HOME)/.openttd/gm
+INSTALL_DIR?=$(HOME)/.openttd/data
 else
 ifeq ($(OSTYPE),Darwin)
-INSTALL_DIR?=$(HOME)/Documents/OpenTTD/gm
+INSTALL_DIR?=$(HOME)/Documents/OpenTTD/data
 else
 ifeq ($(shell echo "$(OSTYPE)" | cut -d_ -f1),MINGW32)
-INSTALL_DIR?=C:\Documents and Settings\$(USERNAME)\My Documents\OpenTTD\gm
+INSTALL_DIR?=C:\Documents and Settings\$(USERNAME)\My Documents\OpenTTD\data
 else
 INSTALL_DIR?=
 endif
@@ -59,6 +71,17 @@ ifdef INSTALLDIR
 INSTALL_DIR = $(INSTALLDIR)
 endif
 
+# file extentions which indicate plain text source files, 
+# parsable by a text editor (SRC) and binary source files (INC)
+ifeq ($(PROJECT_TYPE),NFO)				# NFO style
+	FILE_SRC_EXTENSIONS ?= pnfo tnfo
+	FILE_INC_EXTENSIONS ?= wav pcx
+endif
+ifeq ($(PROJECT_TYPE),NML)				# NML style
+	FILE_SRC_EXTENSIONS ?= pnml nml tnml
+	FILE_INC_EXTENSIONS ?= wav pcx png
+endif
+
 ################################################################
 # Get the Repository revision, tags and the modified status
 # The displayed name within OpenTTD / TTDPatch
@@ -69,7 +92,7 @@ endif
 REPO_REVISION ?= $(shell $(HG) id -n | cut -d+ -f1)
 REPO_MODIFIED ?= $(shell [ "`$(HG) id | cut -c13`" = "+" ] && echo "M" || echo "")
 REPO_TAGS     ?= $(shell $(HG) id -t | grep -v "tip")
-REPO_FILES_CMD := $(HG) st -A | grep -v  "^I" | grep -v "^?" | grep -v "^\!" | cut -d\  -f2
+REPO_FILES_CMD := $(HG) st -A | grep -v  "^I" | grep -v "^?" | grep -v "^R" | grep -v "^\!" | cut -d\  -f2
 REPO_FILES    ?= $(shell $(REPO_FILES_CMD))
 REPO_DIRS     ?= $(shell for i in $(REPO_FILES); do dirname $$i; done | sort | uniq)
 REPO_TITLE    := $(REPO_NAME) $(shell [ -n "$(REPO_TAGS)" ] && echo $(REPO_TAGS)$(REPO_MODIFIED) || echo nightly-r$(REPO_REVISION)$(REPO_MODIFIED))
@@ -99,15 +122,18 @@ ZIP_FILENAME       := $(VERSIONED_FILENAME).zip
 REV_EXTENSION      ?= REV
 MD5_FILENAME       := $(DIR_NAME).md5
 REV_FILENAME       := $(VERSIONED_FILENAME).$(REV_EXTENSION)
+# customly defined tags. Don't change the filename.
+FILE_CUSTOM_TAGS   := custom_tags.txt
 
 DOC_FILES_SRC      := $(LICENSE_FILENAME_SRC) $(README_FILENAME_SRC) $(CHANGELOG_FILENAME_SRC)
 DOC_FILES          := $(addsuffix .txt,$(basename $(DOC_FILES_SRC)))
 
 # Directories which to remember when creating a source release
-MAIN_DIRS           = $(SRC_DIR) $(DOC_DIR) $(SCRIPT_DIR) $(TEMPLATE_DIR) $(EXTRA_DIRS)
+MAIN_DIRS           = $(SRC_DIR) $(DOC_DIR) $(SCRIPT_DIR) $(TEMPLATE_DIR) $(LANG_DIR) $(EXTRA_DIRS)
 
 FILE_SRC_RE        := $(shell echo $(FILE_SRC_EXTENSIONS) | tr -s "[:space:]" "|")
 FILE_INC_RE        := $(shell echo $(FILE_INC_EXTENSIONS) | tr -s "[:space:]" "|")
+FILES_NOT_PACK_RE  := "(\.hgignore|\.hgtags|backup\.push|\.devzone)"
 
 # Remove the @ when you want a more verbose output.
 _V ?= @
