--- a/scripts/Makefile.common
+++ b/scripts/Makefile.common
@@ -8,8 +8,18 @@ clean:
 	$(_V)-rm -rf $(MAKEFILE_DEP) $(MAIN_TARGET) $(SRC_DIR)/*.nfo $(DOC_FILENAMES) $(REV_FILENAME) md5.check
 	$(_V)-rm -rf $(CLEAN_ADD)
 
-mrproper: clean
-	$(_V)-rm -rf $(DIR_BASE)* $(SRC_DIR)/$(FILENAME_STUB) $(DIR_NAME_SRC) $(MD5_FILENAME)
+# More thoroughly clean the source tree. Should restore the initial
+# state of a tarball (except for manual changes to Makefile.local, of
+# course).
+distclean: clean
+	$(_V)-rm -rf $(SRC_DIR)/$(FILENAME_STUB) $(DIR_NAME_SRC) $(DIR_NAME)
+	$(_V)for i in `ls -d $(DIR_BASE)*`; do if [ "$$i" != "$(MD5_FILENAME)" ]; then rm $$i; fi; done
+
+# Even more thoroughly clean the tree. Intended to be used on a
+# repository checkout. Also cleans files that are in a source tarball,
+# but not in the repository.
+mrproper: distclean
+	$(_V)-rm -rf $(MD5_FILENAME)
 
 # Print the output for a number of variables which define this newgrf.
 test :
@@ -53,14 +63,24 @@ endif
 endif
 
 # The real targets which build the grf
+ifeq ($(PROJECT_TYPE),NML)
+%.grf: %.nml $(REV_FILENAME)
+	$(_E) "[Generating] $@"
+	$(_V) $(NML) $(NML_FLAGS) --grf $@ $<
+else
 %.grf: %.nfo
 # pipe all nfo files through grfcodec and produce the grf(s)
-	$(_E) "[Generating] $@"
+	$(_E) "[Generating] $@ with dep $^"
 	$(_V) $(GRFCODEC) ${GRFCODEC_FLAGS} $(notdir $@)
-
+endif
 # .INTERMEDIATE: %.nfo
-# .PRECIOUS: %.nfo
-.SECONDARY: %.nfo
+.PRECIOUS: %.nfo %.nml
+.SECONDARY: %.nfo %.nml
+
+# pre-processing for NML - style projects:
+%.nml: %.pnml $(REV_FILENAME)
+	$(_E) "[Generating] $@ with dep $^"
+	$(_V) $(CC) $(CC_FLAGS) $< > $@
 
 # Dependencies have to be added by a separate make dep step
 %.nfo: %.pnfo $(REV_FILENAME)
@@ -73,7 +93,7 @@ endif
 	$(_E) "[NFORENUM] $@"
 	$(_V)-$(NFORENUM) ${NFORENUM_FLAGS} $@
 
-docs/changelog.txt docs/license.txt: %.txt: %.ptxt $(REV_FILENAME)
+%.txt: %.ptxt $(REV_FILENAME) md5
 	$(_E) "[Generating] $@"
 	$(_V) cat $< \
 		| sed -e "s/$(REPO_TITLE_DUMMY)/$(REPO_TITLE)/" \
@@ -90,10 +110,23 @@ docs: $(DOC_FILES)
 	$(_E) "Version change detected. Re-build forced."
 	$(_V) [ -e *.$(REV_EXTENSION) ] && rm *.$(REV_EXTENSION) || echo ""
 	$(_V) touch $@
+ifeq ($(PROJECT_TYPE),NML) # NML projects need to define some custom tags in a special file
+	$(_V) echo "VERSION: $(VERSION_STRING)" > $(FILE_CUSTOM_TAGS)
+	$(_V) echo "TITLE: $(REPO_TITLE)" >> $(FILE_CUSTOM_TAGS)
+	$(_V) echo "FILENAME: $(MAIN_TARGET)" >> $(FILE_CUSTOM_TAGS)
+endif
 
 depend: $(MAKEFILE_DEP)
 $(MAKEFILE_DEP): $(REV_FILENAME)
 	$(_E) "[Generating] $(MAKEFILE_DEP)"
+ifeq ($(PROJECT_TYPE),CATCODEC)			# BASE SOUND: special file format
+	$(_V) echo "$(SRC_DIR)/$(MAIN_FILENAME_SRC): "`cat $(SRC_DIR)/$(MAIN_FILENAME_SRC) | $(AWK) 'BEGIN { FS = " " } ; { print $$1 }' | grep 'wav' | grep -v '^//' | sed 's/"//g' | sort | uniq` > $(MAKEFILE_DEP)
+else # NFO and NML projects
 	$(_V) for i in `$(REPO_FILES_CMD) | grep -E '($(FILE_SRC_RE)grf)$$'`; do echo "$$i: "`for j in $(FILE_SRC_EXTENSIONS) $(FILE_INC_EXTENSIONS); do cat $$i |  grep -v '^//' | grep -o "[a-zA-Z0-9/_.-]\+\.$$j" | sort | uniq; done` | grep -v -E ": $$" ; done | sort | uniq | $(AWK) '{ print $$0"\n\t$$(_V) touch $$@" }' > $(MAKEFILE_DEP)
-	$(_V) echo "Makefile.dep: $(MAIN_TARGET)" >> $(MAKEFILE_DEP)
 	$(_V) for i in `ls Makefile* scripts/* | grep -v Makefile.dep`; do echo "Makefile.dep: $$i"; done >> $(MAKEFILE_DEP)
+endif
+	$(_V) [ -e $(REV_FILENAME) ] && [ "`cat $(REV_FILENAME)`" = "$(VERSION_STRING)" ] || echo "$(VERSION_STRING)" > $(REV_FILENAME)
+
+addcheck:
+	$(_E) "[Checking] for missing repo files:"
+	$(_V) for i in `$(REPO_FILES_CMD) | grep -E '($(FILE_SRC_RE)grf)$$'`; do hg st $$i `for j in $(FILE_SRC_EXTENSIONS) $(FILE_INC_EXTENSIONS); do cat $$i |  grep -v '^//' | grep -o "[a-zA-Z0-9/_.-]\+\.$$j" | sort | uniq; done`; done | sort | uniq  | grep "^?" && echo "Missing dependencies!" || echo "All is fine"
