Change: [Makefile] Update Makefile to 0.3.1 - Feature [#1052]: Native support for .hgeol (mercurial 1.5.4 or later) - Change: Add information for new compile farm - Change: ignore some common extensions also in subdirs - Change [#1017]: Let bundle_zip behave the same as bundle_tar, don't pack the tar additionally - Fix: Fail on the missing file, not on the dependency check - Fix: {{REPO_REVISON}} didn't work as tag for strings in the readme - Fix: {{GRF_MD5}} didn't work as tag for string in the readme - Fix: Regex for bundle_zip was looking for ?grf instead of .grf - Fix (r89): Also don't put extended attributes in the release tars

--- a/scripts/Makefile.common
+++ b/scripts/Makefile.common
@@ -33,6 +33,7 @@ test :
 	$(_E) "bzip:                         $(BZIP) $(BZIP_FLAGS)"
 	$(_E) "Local installation directory: $(INSTALL_DIR)"
 	$(_E) "Repository revision:          r$(REPO_REVISION)"
+	$(_E) "Repository branch:            $(REPO_BRANCH)"
 	$(_E) "Main target:                  $(MAIN_TARGET)"
 	$(_E) "GRF files:                    $(GRF_FILES)"
 	$(_E) "Doc files:                    $(DOC_FILES)"
