Change: Add copyright information to build system

--- a/scripts/Makefile.def
+++ b/scripts/Makefile.def
@@ -1,3 +1,14 @@
+#
+# This file is part of the OpenMSX music set for OpenTTD.
+# OpenMSX is free content; you can redistribute it and/or modify it under the terms of the
+# GNU General Public License as published by the Free Software Foundation, version 2.
+# OpenMSX is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
+# without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+# See the GNU General Public License for more details. You should have received a copy of
+# the GNU General Public License along with Swedish RailSet. If not, see 
+# <http://www.gnu.org/licenses/>.
+#
+
 shell = /bin/sh
 
 # We want to disable the default rules. It's not c/c++ anyway
