Fix: [Makefile] Disallow automatic inclusion of default c headers by gcc 4.8

--- a/scripts/Makefile.def
+++ b/scripts/Makefile.def
@@ -27,7 +27,7 @@ TAR_FLAGS      ?= -cf
 ZIP_FLAGS      ?= -r
 SRCZIP_FLAGS   ?=
 BZIP_FLAGS     ?= -k9f
-CC_FLAGS       ?= -C -E - <
+CC_FLAGS       ?= -nostdinc -C -E - <
 MAKE_FLAGS     ?=
 UNIX2DOS_FLAGS ?= -q
 NML_FLAGS      ?=
