--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -5,7 +5,7 @@
 # OpenMSX is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
 # without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 # See the GNU General Public License for more details. You should have received a copy of
-# the GNU General Public License along with Swedish RailSet. If not, see 
+# the GNU General Public License along with Swedish RailSet. If not, see
 # <http://www.gnu.org/licenses/>.
 #
 
@@ -15,8 +15,7 @@ $(MAIN_TARGET): $(MAIN_FILENAME_SRC) $(MIDI_FILES) $(DESC_FILENAME) $(README_FIL
 	@echo "name        = $(REPO_NAME)" >> $@
 	@echo "shortname   = $(REPO_SHORTNAME)" >> $@
 	@echo "version     = $(REPO_REVISION)" >> $@
-
-	$(_V) cat $(DESC_FILENAME_SRC) | grep -E '^description' | sed 's/$$/ [$(REPO_TITLE)]/' >> $@
+	$(_V) $(SCRIPT_DIR)/translations.sh | sed 's/{TITLE}/$(REPO_TITLE)/' >> $@
 
 	@echo "" >> $@
 	@echo "[files]" >> $@
@@ -29,13 +28,13 @@ $(MAIN_TARGET): $(MAIN_FILENAME_SRC) $(MIDI_FILES) $(DESC_FILENAME) $(README_FIL
 	@echo "" >> $@
 	@echo "[names]" >> $@
 	$(_V) cat $(MAIN_FILENAME_SRC) | scripts/sanitize_list.py | scripts/namelist.py >> $@
-	
+
 	@echo "" >> $@
 	@echo "[origin]" >> $@
 	@echo "$(REPO_ORIGIN)" >> $@
 	$(_E) "[Done] Basesound successfully generated."
 	$(_E) ""
-	
+
 docs/readme.txt: readme.ptxt $(REV_FILENAME)
 	$(_E) "[Generating] $@"
 	$(_V) cat $< \
@@ -45,5 +44,5 @@ docs/readme.txt: readme.ptxt $(REV_FILENAME)
 		| sed -e "s/$(OUTPUT_FILENAME_DUMMY)/$(OUTPUT_FILENAME)/" \
 		> $@
 	$(_V) cat $(MAIN_FILENAME_SRC) | scripts/sanitize_list.py | scripts/authorlist.py >> $@
-		
+
 	$(_V) [ -z "$(UNIX2DOS)" ] || $(UNIX2DOS) $(UNIX2DOS_FLAGS) $@
