--- a/Makefile.config
+++ b/Makefile.config
@@ -10,10 +10,10 @@ GENERATE_GRF       := music
 BASE_FILENAME      := openmsx
 THEMES_FILE        := src/themes.list
 MIDI_FILES         := $(shell cat $(THEMES_FILE) | ./scripts/midifiles.py)
-LANG_FILES         := `ls lang/*.lng`
+LANG_FILES         := $(shell ls lang/*.lng)
 BUNDLE_FILES        = $(BASE_FILENAME).obm $(DOC_FILES) $(MIDI_FILES)
 
 # If everything is default, you don't need the rest:
 
 # comment out those dirs which are not in use
-SRIPT_DIR          := scripts
+SCRIPT_DIR         = scripts
