Fix: [Makefile] Creating source bundles failed

--- a/Makefile.config
+++ b/Makefile.config
@@ -13,6 +13,7 @@ MIDI_FILES         := $(shell cat $(THEMES_FILE) | ./scripts/midifiles.py)
 LANG_FILES         := $(shell ls lang/*.lng)
 BUNDLE_FILES        = $(BASE_FILENAME).obm $(DOC_FILES) $(MIDI_FILES)
 
+MD5_SRC_FILENAME   := $(BASE_FILENAME).obm
 # If everything is default, you don't need the rest:
 
 # comment out those dirs which are not in use
