--- a/Makefile.config
+++ b/Makefile.config
@@ -2,8 +2,7 @@
 
 REPO_NAME          := OpenMSX
 REPO_SHORTNAME     := OMSX
-REPO_ORIGIN         = default = Please redownload from BaNaNaS.
-# GRF_ID           :=
+REPO_ORIGIN         = default = http://openttd.org/downloads/openmsx-releases
 
 GENERATE_GRF       := music
 
